--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-toastify": "^11.0.5",
+    "recharts": "2.15.4",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0"
   },
